--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-basic-boilerplate",
+  "name": "array-methods-visualizer",
   "version": "1.0.0",
-  "description": "webpack simple boilerplate starter",
+  "description": "animated javascript array methods visualizer",
   "main": "index.js",
   "scripts": {
     "start": "webpack-cli serve",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/younes-barhouni/webpack-basic-boilerplate.git"
+    "url": "git+https://github.com/younes-barhouni/array-visualizer.git"
   },
   "keywords": [
     "webpack",
@@ -24,9 +24,9 @@
   "author": "Younes barhouni <younesbarhouni@live.com> (https://github.com/younes-barhouni)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/younes-barhouni/webpack-basic-boilerplate/issues"
+    "url": "https://github.com/younes-barhouni/array-visualizer/issues"
   },
-  "homepage": "https://github.com/younes-barhouni/webpack-basic-boilerplate#readme",
+  "homepage": "https://github.com/younes-barhouni/array-visualizer#readme",
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-react": "^7.14.5",
